<resources>
  <string name="app_name">WallR</string>

  <!-- Image list types -->
  <string name="explore_images">EXPLORE</string>
  <string name="recent_images">RECENT</string>
  <string name="popular_images">POPULAR</string>
  <string name="standouts_images">STANDOUTS</string>
  <string name="buildings_images">BUILDINGS</string>
  <string name="food_images">FOOD</string>
  <string name="nature_images">NATURE</string>
  <string name="objects_images">OBJECTS</string>
  <string name="people_images">PEOPLE</string>
  <string name="technology_images">TECHNOLOGY</string>

  <!-- Guillotine menu strings -->
  <string name="explore_title">Explore</string>
  <string name="top_picks_title">Top Picks</string>
  <string name="categories_title">Categories</string>
  <string name="minimal_title">Minimal</string>
  <string name="collection_title">Collections</string>
  <string name="feedback_title">Feedback</string>
  <string name="buy_pro_title">Buy Pro</string>
  <string name="guillotine_pro_badge">PRO</string>

  <!-- Generic strings -->
  <string name="generic_error_message">Something went wrong. Please try again</string>
  <string name="no_internet_message">Please ensure you have a working internet connection</string>
  <string name="cancel_text">Cancel</string>
...
  <string name="set_wallpaper_error_message">Couldn\'t set wallpaper</string>
  <string name="crystallizing_wallpaper_wait_message">Crystallizing wallpaper. Please wait…</string>
  <string name="crystallizing_wallpaper_successful_message">Wallpaper has been crystallized!</string>

  <!-- Main activity strings -->
  <string name="main_activity_no_email_client_error">There is no email client installed</string>
  <string name="main_activity_exit_confirmation_message">Press back again to exit</string>
  <string name="main_activity_feedback_contact_using_message">Contact using</string>
  <string name="search_menu_title">search</string>
  <string name="main_activity_hamburger_hint_title">100K+ High-Quality Wallpapers</string>
  <string name="main_activity_hamburger_hint_description">Choose from more than 100K wallpapers from various categories to meet all your needs.</string>
  <string name="main_activity_switch_layout_automatic_wallpaper_changer">Automatic Wallpaper Changer</string>

...
