...

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/contentHamburger"
      style="@style/HamburgerImageButtonTheme"
      android:layout_centerVertical="true"
      android:clickable="true"
      android:src="@drawable/ic_hamburger_vertical" />

    <com.zebrostudio.wallrcustoms.customtextview.WallrCustomTextView
      android:id="@+id/toolbarTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:text="@string/explore_title"
      android:textSize="@dimen/guillotine_item_text_size" />
...
